syntax="proto3";
option go_package= "./genuser";


service UserService{
    rpc Register(UserRequest)returns(UserResponse);
    rpc Login(LoginRequest)returns(LoginResponse);
}

message UserRequest {
    string user_name=1;
    string password=2;
    string email=3;
}

message UserResponse{
    string user_id=1;
    string user_name=2;
    string email=3;
    string password=4;
}

message LoginRequest{
    string user_name=1;
    string password=2;
}

message LoginResponse{
    string token=1;
    string expired_at=2;
}